@@ -1,6 +1,9 @@
 v1.5.1 - TBD
 NEW:
   Added JEI info for Dimensional Flux.
+CHANGES:
+  Explicitly unlock the recipes for Matter/Energy Converter and Plasma Generator when you
+    pick up an Energy Crystal.
 FIXED:
   Minecraft 1.18 version only: Fix Titanium worldgen using platinum configuration settings.
   Minecraft 1.18 version only: Fixed Show Ores command only counting blocks above Y level 0.
